# national_geologic_map_bulk_rdf

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile  pyproject.toml
scripts/: rows_per_layer.sh
src/: lib.py  main.py
