[project]
name = "national-geologic-map-bulk"
version = "0.1.0"
description = "generate bulk RDF data from https://ngmdb.usgs.gov/Prodesc/proddesc_118545.htm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
